virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: prometheus-fabric
spec:
  hosts:
    - "prometheus-fabric.operators.ep-mt.eks.${ARGOCD_ENV_CLOUD_REGION}.aws.smarsh.cloud"
  gateways:
    - istio-ingress/operators-https-gw
  http:
    - route:
        - destination:
            host: prometheus-server
            port:
              number: 9090
      match:
        - uri:
            prefix: /
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: prometheus-fabric
spec:
  hosts:
    - "fabric-grafana.operators.ep-mt.eks.${ARGOCD_ENV_CLOUD_REGION}.aws.smarsh.cloud"
  gateways:
    - istio-ingress/operators-https-gw
  http:
    - route:
        - destination:
            host: grafana
            port:
              number: 80
      match:
        - uri:
            prefix: /
